# ModularRobotTaskAllocator

./: .gitignore  README.md  get_file_tree.py  pyproject.toml
exec/: run_simulator.py
exec/small_sample/: property.yaml  task.yaml
src/modular_robot_task_allocator/core/: __init__.py  coodinate_utils.py  risk_scenario.py  simulation_map.py
src/modular_robot_task_allocator/core/module/: __init__.py  module.py
src/modular_robot_task_allocator/core/robot/: __init__.py  performance.py  robot.py
src/modular_robot_task_allocator/core/task/: __init__.py  base_task.py  charge.py
src/modular_robot_task_allocator/core/task/manufacture/: __init__.py  assembly.py  manufacture.py
src/modular_robot_task_allocator/core/task/transport/: __init__.py  transport.py  transport_module.py
src/modular_robot_task_allocator/io/: class_utils.py  input.py
src/modular_robot_task_allocator/simulator/: __init__.py  agent.py  simulation.py
src/modular_robot_task_allocator/utils/: __init__.py  logger.py
